Ajustes no botão

--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
           vulputate mi. Et ultrices neque ornare aenean euismod elementum nisi
           quis.
         </p>
-        <a
-          href="https://app.box.com/s/esb7tleia8vml0njf53mdzeo7og0v0f5"
-          target="_blank"
-        >
-          <button class="btn">Ver meu curriculo</button>
-        </a>
+        <div class="container">
+          <a
+            href="https://www.linkedin.com/in/danielonascimento/"
+            target="_blank"
+          >
+            <button class="btn">Linkedin</button>
+          </a>
+        </div>
       </div>
       <div class="box projects">
         <h2>MEUS PROJETOS</h2>
